@@ -1,6 +1,6 @@
 #ifndef CLSID_EXAMPLE_H
 #define CLSID_EXAMPLE_H
 
-const X3CLSID CLSID_Example("86347b32-64e4-490c-b273-ec7e010f244e");
+static const X3CLSID CLSID_Example("86347b32-64e4-490c-b273-ec7e010f244e");
 
 #endif // CLSID_EXAMPLE_H
